tried to fix overlapping bug

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ img:hover {
 	#content-bar {
 		top: 35vh;
 		margin: 1em;
-		margin-bottom: 3em;
+		margin-bottom: 1.4em;
 	}
 	#vesika {
 		height: 6em;
